WebKit/win/WebView.cpp
@@ -736,6 +736,8 @@ void WebView::deleteBackingStore()
     }
     m_backingStoreBitmap.clear();
     m_backingStoreDirtyRegion.clear();
+    if (m_layerRenderer)
+        m_layerRenderer->setBackingStoreDirty(false);
 
     m_backingStoreSize.cx = m_backingStoreSize.cy = 0;
 }
@@ -783,6 +785,9 @@ void WebView::addToDirtyRegion(HRGN newRegion)
         m_backingStoreDirtyRegion.set(combinedRegion);
     } else
         m_backingStoreDirtyRegion.set(newRegion);
+
+    if (m_layerRenderer)
+        m_layerRenderer->setBackingStoreDirty(true);
 
     if (m_uiDelegatePrivate)
         m_uiDelegatePrivate->webViewDidInvalidate(this);
@@ -910,6 +915,8 @@ void WebView::updateBackingStore(FrameView* frameView, HDC dc, bool backingStore
             m_uiDelegatePrivate->webViewPainted(this);
 
         m_backingStoreDirtyRegion.clear();
+        if (m_layerRenderer)
+            m_layerRenderer->setBackingStoreDirty(false);
     }
 
     if (!dc) {
@@ -6077,7 +6084,6 @@ void WebView::setAcceleratedCompositing(bool accelerated)
             ASSERT(m_viewWindow);
             m_layerRenderer->setHostWindow(m_viewWindow);
             m_layerRenderer->createRenderer();
-            updateRootLayerContents();
         }
     } else {
         m_layerRenderer = 0;
@@ -6116,7 +6122,7 @@ void WebView::updateRootLayerContents()
         return;
     FrameView* frameView = coreFrame->view();
 
-    m_layerRenderer->setScrollFrame(IntRect(frameView->scrollX(), frameView->scrollY(), frameView->layoutWidth(), frameView->layoutHeight()));
+    m_layerRenderer->setScrollFrame(IntPoint(frameView->scrollX(), frameView->scrollY()), IntSize(frameView->layoutWidth(), frameView->layoutHeight()));
 }
 #endif
 
